--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@tanstack/react-query": "^4.29.5",
     "expo": "~48.0.11",
     "expo-clipboard": "~4.1.2",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gifted-chat": "^2.0.1",
